Added '/hire' API endpoint, fixed bug with hiring business logic and added Swagger docs.
