# app/Http/Controllers/Api/HireApiController.php
@@ -5,11 +5,11 @@ namespace App\Http\Controllers\Api;
 use App\Http\Controllers\Controller;
 use App\Http\Requests\Api\HireApiRequest;
 use App\Http\Resources\HireResource;
-use App\Models\Developer;
 use App\Models\Hire;
 use App\Services\Contracts\IHireService;
 use Illuminate\Http\Request;
 use Illuminate\Http\Response;
+use Illuminate\Validation\ValidationException;
 use Symfony\Component\HttpFoundation\Response as ResponseAlias;
 
 class HireApiController extends Controller
@@ -41,39 +41,24 @@ class HireApiController extends Controller
      *
      * @return \Illuminate\Http\JsonResponse
      */
-    public function create(HireApiRequest $request, Hire $hire)
+    public function create(HireApiRequest $request)
     {
-        $hire_devs_by_names = Developer::where('name', $request->names)->get();
-//        $hire_devs_by_names = Hire::with('developer')->get();
-        $hire_dev = '';
-        foreach ($hire_devs_by_names as $dev) {
-            $hire_dev = $hire->create([
-//                'developer_id' => $dev->developer->id,
-                'developer_id' => $dev->id,
-                'names' => request('names'),
-                'start_date' => request('start_date'),
-                'end_date' => request('end_date'),
-            ]);
+        $request->validated();
+        try {
+            $this->hireService->storeHire($request);
+            return response('', ResponseAlias::HTTP_CREATED);
+        } catch (ValidationException $ex) {
+            return response()->json([
+                'message' => 'Validation errors',
+                'errors' => $ex->errors()
+            ], ResponseAlias::HTTP_CONFLICT);
         }
-
-        return response()->json($hire_dev, ResponseAlias::HTTP_CREATED);
     }
-
-//    /**
-//     * Store a newly created resource in storage.
-//     *
-//     * @param  \Illuminate\Http\Request  $request
-//     * @return \Illuminate\Http\JsonResponse
-//     */
-//    public function store()
-//    {
-//
-//    }
 
     /**
      * Display the specified resource.
      *
-     * @param  \App\Models\Hire  $hire
+     * @param \App\Models\Hire $hire
      * @return \Illuminate\Http\Response
      */
     public function show(Hire $hire)
@@ -84,7 +69,7 @@ class HireApiController extends Controller
     /**
      * Show the form for editing the specified resource.
      *
-     * @param  \App\Models\Hire  $hire
+     * @param \App\Models\Hire $hire
      * @return \Illuminate\Http\Response
      */
     public function edit(Hire $hire)
@@ -95,8 +80,8 @@ class HireApiController extends Controller
     /**
      * Update the specified resource in storage.
      *
-     * @param  \Illuminate\Http\Request  $request
-     * @param  \App\Models\Hire  $hire
+     * @param \Illuminate\Http\Request $request
+     * @param \App\Models\Hire $hire
      * @return \Illuminate\Http\Response
      */
     public function update(Request $request, Hire $hire)
