# public/api.yaml
@@ -9,7 +9,7 @@ servers:
     description: local server
 
 security:
-    - basicAuth: [ ]
+  - basicAuth: [ ]
 
 paths:
   /developer:
@@ -26,6 +26,8 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Developer'
+        '401':
+          description: Unauthorized.
     post:
       tags:
         - Developer
@@ -47,6 +49,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorDto'
+        '401':
+          description: Unauthorized.
   /developer/{id}:
     put:
       tags:
@@ -73,6 +77,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorDto'
+        '401':
+          description: Unauthorized.
     delete:
       tags:
         - Developer
@@ -80,7 +86,9 @@ paths:
       responses:
         '404':
           description: when developer with the specified id doesn't exist
-        '201':
+        '401':
+          description: Unauthorized.
+        '204':
           description: when deletion is successful
       parameters:
         - in: path
@@ -96,6 +104,8 @@ paths:
       responses:
         '404':
           description: when developer with the specified id doesn't exist
+        '401':
+          description: Unauthorized.
         '200':
           description: when the developer is found in the db and returned
           content:
@@ -110,7 +120,61 @@ paths:
             type: integer
           required: true
           description: Id of the developer to get
-
+  /hire:
+    get:
+      tags:
+        - Hire
+      summary: Get all hired developers.
+      responses:
+        '200':
+          description: JSON Array of all hired developers.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/HireRead'
+        '401':
+          description: Unauthorized.
+    post:
+      tags:
+        - Hire
+      summary: Hire developer/s.
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/HireRequest'
+      responses:
+        '201':
+          description: Developer/s hired successfully
+        '400':
+          description: Bad Request Body
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorDto'
+        '401':
+          description: Unauthorized.
+  /hire/{id}:
+    delete:
+      tags:
+        - Hire
+      summary: Delete hire reservation by reservation id.
+      responses:
+        '204':
+          description: Record deleted successfully.
+        404:
+          description: Hire reservation record with the provided Id was not found.
+        '401':
+          description: Unauthorized.
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+          required: true
+          description: Id of the hire record to delete
 
 
 components:
@@ -195,7 +259,7 @@ components:
         ids:
           type: array
           items:
-            type: string
+            type: integer
         start_date:
           type: string
           format: date
@@ -206,6 +270,22 @@ components:
         - ids
         - start_date
         - end_date
+    HireRead:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int32
+        developer_id:
+          type: integer
+          format: int32
+        start_date:
+          type: string
+          format: date
+        end_date:
+          type: string
+          format: date
+
 
     ErrorDto:
       type: object
